--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "orbt/resource-mirror": "dev-master"
+        "orbt/style-mirror": "dev-master"
     },
     "autoload": {
         "psr-0": { "Orbt\\Bundle\\StyleMirrorBundle\\": "" }
